# code-indexer

./: .gitignore  README.md  pyproject.toml  skill.md
src/code_indexer/: __init__.py  server.py
